# BlueFeather

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  REAL_INTRO_SETUP_NOTES.md  bluefeather.default.json  config.yml  generate_o2r.py  generate_otr.py  hm64.json  launch-lldb-debug.sh
.github/workflows/: linux-validation.yml  macos-arm64-validation.yml  windows-validation.yml
AssetTool/: CMakeLists.txt  Main.cpp  ZBlob.cpp  ZBlob.h
CMake/: HideSystemSpdlog.cmake  Info.plist.in
hm64/: CMakeLists.txt
hm64/assets/yaml/us/runtime/: rom.yml
hm64/bluefeather/include/: common.h  hm64_ram.h  ld_symbols.h  ld_symbols_runtime_overrides.h  libaudio.h  libmus.h  mainLoop.h  nualstl_n.h  nusys.h  ultra64.h
hm64/bluefeather/include/buffers/: buffers.h
hm64/bluefeather/include/system/: controller.h  globalSprites.h  sprite.h
hm64/bluefeather/src/: hm64_game.cpp  hm64_gu_compat.c  libmus.cpp  main.cpp  mainLoop.c  nugfx.cpp  nugfx.h  stubs.c  ultra64_compat.cpp  ultra64_compat.h
hm64/bluefeather/src/libmus/: player.c  player.h  player_api.c  player_commands.c
hm64/bluefeather/src/system/: globalSprites.c  graphic.c  sprite.c
hm64/bluefeather/src/ui/: BlueFeatherUI.cpp  BlueFeatherUI.h
hm64/include/: common.h  ld_symbols.h
hm64/moonwright/include/: common.h  hm64_host_rom.h  hm64_ram.h  include_asm.h  ld_symbols.h  libmus.h
hm64/moonwright/include/buffers/: buffers.h
hm64/moonwright/include/game/: gameFile.h
hm64/moonwright/include/system/: controller.h  entity.h
hm64/moonwright/src/: game_stubs.c  hm64_game.cpp  hm64_game.h  hm64_host_rom.cpp  hm64_host_shims.c  hm64_ram.cpp  hm64_title_globals.c  hm64_title_runtime.cpp  hm64_title_runtime.h  ld_symbols.c  main.cpp  mainLoop.c  nugfx.cpp  nugfx.h  pc_main.cpp  rom_symbols.c  sprite_stubs.c  ultra64_compat.cpp
hm64/moonwright/src/system/: globalSprites.c  graphic.c  sprite.c
hm64/src/: mainLoop.c  mainLoop.h  mainproc.c  mainproc.h
hm64/src/buffers/: dialogueIconSpriteBuffer.c  farmRankingsBuffer.h  sramBuffer.h
hm64/src/data/animationScripts/: ann.inc.c  annCliffBaby.inc.c  assistantCarpenter.inc.c  baby.inc.c  barley.inc.c  basil.inc.c  bird.inc.c  bunny.inc.c  calf.inc.c  cat.inc.c  chick.inc.c  chicken.inc.c  cicada.inc.c  cliff.inc.c  cow.inc.c  cowIndoors.inc.c  crab.inc.c  cricket.inc.c  dog.inc.c  dogVillage.inc.c  doug.inc.c  dragonfly.inc.c  duke.inc.c  ellen.inc.c  elli.inc.c  elliJeffBaby.inc.c  entomologist.inc.c  festivalGirl1.inc.c  festivalGirl2.inc.c  festivalGirl3.inc.c  fox.inc.c  gotz.inc.c  gourmetJudge.inc.c  gray.inc.c  greg.inc.c  harris.inc.c  harvestGoddess.inc.c  harvestSprite.inc.c  hawk.inc.c  holdableItems1.inc.c  (+54 more)
hm64/src/game/: animals.c  cutscenes.c  evaluation.c  fieldObjects.c  fieldObjects.h  game.c  game.h  gameAudio.c  gameAudio.h  gameFile.c  gameFile.h  initialize.c  items.c  items.h  level.c  levelInteractions.c  namingScreen.c  namingScreen.h  npc.c  overlayScreens.c  overlayScreens.h  player.c  player.h  shop.h  transition.c  transition.h
hm64/src/system/: audio.c  controller.c  controller.h  cutscene.c  cutscene.h  dialogue.c  dialogue.h  entity.c  globalSprites.c  globalSprites.h  graphic.c  interpolation.c  map.c  map.h  mapController.c  mapController.h  memory.c  message.c  message.h  sprite.c  sprite.h
hm64/tools/: build_custom_assets.py  convert_cutscenes.py  generate_rom_symbol_asm.py  generate_torch_runtime_metadata.py
hm64/tools/libhm64/sprites/: assembler.py
patches/libultraship/: 0001-moonwright-runtime-texture-fixes.patch
