cmake_minimum_required(VERSION 3.24)

project(Moonwright LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(LIBULTRASHIP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libultraship)
set(ZAPD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Shipwright/ZAPDTR/ZAPD)
set(MOONWRIGHT_ZAPD_SOURCE_DIR ${ZAPD_DIR})
set(GAME_STR "OOT")

add_subdirectory(${LIBULTRASHIP_DIR} ${CMAKE_BINARY_DIR}/libultraship)
if(EXISTS ${ZAPD_DIR}/CMakeLists.txt)
    add_subdirectory(${ZAPD_DIR} ${CMAKE_BINARY_DIR}/ZAPD)
endif()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/OTRExporter ${CMAKE_BINARY_DIR}/OTRExporter)
add_subdirectory(hm64)
