cmake_minimum_required(VERSION 3.24)

project(BlueFeather LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(LIBULTRASHIP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libultraship)
set(BLUEFEATHER_ASSET_TOOL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/AssetTool)
set(GAME_STR "OOT")

add_subdirectory(${LIBULTRASHIP_DIR} ${CMAKE_BINARY_DIR}/libultraship)
if(EXISTS ${BLUEFEATHER_ASSET_TOOL_SOURCE_DIR}/CMakeLists.txt)
    add_subdirectory(${BLUEFEATHER_ASSET_TOOL_SOURCE_DIR} ${CMAKE_BINARY_DIR}/AssetTool)
    add_executable(BlueFeatherAssetTool ALIAS ZAPD)
endif()
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/OTRExporter ${CMAKE_BINARY_DIR}/OTRExporter)
add_subdirectory(hm64)
